Fix Dark Mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,17 @@
 @use "./link" as link;
+@use "./colors" as colors;
 
 html {
   --cooking-primary: #17853f;
   --cooking-primary-active: #22c55e;
   --cooking-primary-text: white;
-  --cooking-background: rgb(244 244 245);
+  --cooking-background: #f4f4f5;
   --cooking-text: black;
+
+  &.dark {
+    --cooking-background: #27272a;
+    --cooking-text: white;
+  }
 }
 
 body {
@@ -15,6 +21,18 @@ body {
   background: var(--cooking-background);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.light {
+  body {
+    color: var(--cooking-text);
+  }
+}
+
+.dark {
+  body {
+    color: var(--cooking-text);
+  }
 }
 
 a {
@@ -33,6 +51,7 @@ th {
 
 tr:nth-child(odd) {
   background: lightgray;
+  color: colors.$black;
 }
 
 td {
